--- a/NarjisseKabbara_3_26052021/package.json
+++ b/NarjisseKabbara_3_26052021/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "sass": "sass --watch ./sass/style.scss:./css/style.css"
+    "sass": "sass --watch ./sass/style.scss:./css/style.css",
+    "sass": "sass --watch ./sass/anim.scss:./css/anim.css"
   },
 
   "author": "",
