--- a/NarjisseKabbara_3_26052021/package.json
+++ b/NarjisseKabbara_3_26052021/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "sass": "sass --watch ./sass/style.scss:./css/style.css",
-    "sass": "sass --watch ./sass/anim.scss:./css/anim.css"
+    "sass": "sass --watch ./sass/style.scss:./css/style.css"
   },
 
   "author": "",
